test/libsolidity/syntaxTests/freeFunctions/free_override.sol
function fun() override {
}
// ----
// SyntaxError: (0-27): Free functions cannot override.
